    Thanks to Joe Dalton <joedalton2@yahoo.dk> (Closes: #830587)
  * Update Brazilian Portuguese debconf templates translation.
    Thanks to Diego Neves <diego@diegoneves.eti.br> (Closes: #830691)

  [ Ben Hutchings ]
  * Update Dutch debconf template translations (Frans Spiesschaert)
    (Closes: #837097)
  * perf: Drop support for versions older than 3.2

 -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 14 Jul 2016 19:58:02 +0200

linux-base (4.4) unstable; urgency=medium

  [ Ben Hutchings ]
  * Update debconf template translations:
    - Portuguese (Américo Monteiro) (Closes: #826779)
    - Polish (Łukasz Dulny)
    - Japanese (Victory)
    - Russian (Yuri Kozlov) (Closes: #828772)
    - German (Markus Hiereth)
    - French (Jean-Pierre Giraud) (Closes: #830171)
  * linux-check-removal: Fix substitution of package name in debconf title

  [ Salvatore Bonaccorso ]
  * Update Swedish debconf template translation.
    Thanks to Martin Bagge <brother@bsnet.se> (Closes: #828725)
  * Update Czech debconf template translation.
    Thanks to Michal Simunek <michal.simunek@gmail.com> (Closes: #828944)

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 08 Jul 2016 17:54:11 +0200

linux-base (4.3) unstable; urgency=medium

  * Add linux-check-removal command for use by package prerm scripts
    - Override lintian warning and error for this unusual debconf usage

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 06 Jun 2016 17:06:15 +0100

linux-base (4.2) unstable; urgency=medium

  * Change source format to 3.0 (native) so that .git directory is excluded
    by default
  * Add manual page for linux-update-symlinks
  * read_kernelimg_conf(): Quietly ignore settings used only by kernel-package
  * debian/rules: Add build-{arch,indep} targets
  * debian/control: Update policy version to 3.9.8; no changes required

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 05 Jun 2016 23:03:37 +0100

linux-base (4.1) unstable; urgency=medium

  * Adjust for migration to git: